Created Product Section

--- a/index.html
+++ b/index.html
@@ -15,40 +15,39 @@
 
 <body>
     <div class="header_section">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
-                <a class="logo" href="index.html">
-                    <h1>PHEONIX CHEMICALS</h1>
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+            <a class="logo" href="index.html">
+                <h1>PHEONIX CHEMICALS</h1>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                  </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="products.html">Products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="products.html">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
 
         <!-----banner-->
         <div class="d-flex align-items-center">
-            <div class="container banner">
+            <div class="banner">
                 <div class="row">
                     <div class="col-lg-6 d-flex flex-column">
                         <h2>Committed For Superior Quality</h2>
-                        <h1>Construction Chemicals</h1>
+                        <h1>Pheonix Chemicals</h1>
                     </div>
                     <div class="col-lg-6 d-flex flex-column">
                         <img src="images/banner1.jpg" class="img-fluid">
@@ -56,7 +55,46 @@
                 </div>
             </div>
         </div>
-
+    </div>
+    <!---products area-->
+    <section class="products section-bg">
+        <div class="container">
+            <div class="section-title">
+                <h1>Our Products</h1>
+            </div>
+            <div class="row products">
+                <div class="col-lg-3">
+                    <div class="box">
+                        <h4><a href="hydro.html">HydroSeal</a></h4>
+                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="box">
+                        <h4><a href="prime.html">PrimeBond+</a></h4>
+                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="box">
+                        <h4><a href="putop">PUTopCoat</a></h4>
+                        <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="box">
+                        <h4><a href="Elasto.html">Elastowhite</a></h4>
+                        <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row more">
+                <div class="col-lg-12 d-flex justify-content-center">
+                    <a href="products.html" class="btn btn-outline-primary m-5 p-3">See more products</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
