--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>Index</title>
+
 </head>
 
 <body>
@@ -57,31 +61,32 @@
         </div>
     </div>
     <!---products area-->
-    <section class="products section-bg">
+    <section class="products section">
         <div class="container">
             <div class="section-title">
                 <h1>Our Products</h1>
+                <p>We offer a wide range of products for construction chemicals include most reliable products available for all your needs. </p>
             </div>
             <div class="row products">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
                     <div class="box">
                         <h4><a href="hydro.html">HydroSeal</a></h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
                     <div class="box">
                         <h4><a href="prime.html">PrimeBond+</a></h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
                     <div class="box">
-                        <h4><a href="putop">PUTopCoat</a></h4>
+                        <h4><a href="putop.html">PUTopCoat</a></h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
                     <div class="box">
                         <h4><a href="Elasto.html">Elastowhite</a></h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
@@ -95,6 +100,48 @@
             </div>
         </div>
     </section>
+
+    <footer id="footer" class="mt-5">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 footer-contact">
+                        <h3>Pheonix Chemicals</h3>
+                        <p>
+                            B21, ArKhej, Ahmedabad, Gujarat
+                            <br>
+                            <strong>Phone:</strong>+91-7906830840<br>
+                            <strong>Email:</strong> pheonixchemicals.in@gmail.com<br>
+                        </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Products</h4>
+                        <ul>
+                            <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic Polymer</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="#">Acrylic heatproofing Chemicals</a>
+                            </li>
+                            <li><i class="fas fa-caret-right"></i> <a href="#">Hybrid Pu & Bituminous Chemicals</a></li>
+                            <li><i class="fas fa-caret-right"></i> <a href="#">polyurethane Based Chemicals</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Our Social Networks</h4>
+                        <p>You can reach out us on various platforms.</p>
+                        <div class="social-links mt-3">
+                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
