--- a/products.html
+++ b/products.html
@@ -2,19 +2,17 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- Responsive-->
-    <link rel="stylesheet" href="css/responsive.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/boxicons.min.css">
-    <title>About</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
+    <title>Products</title>
 </head>
 
 <body>
@@ -31,10 +29,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="products.html">Products</a>
                     </li>
                     <li class="nav-item">
@@ -44,57 +42,66 @@
             </div>
         </nav>
     </div>
-    <section class="section mt-5 p-2">
-        <h1 class="text-center">About Us</h1>
-        <p>
-            Typically waterproofing is the process of making a structure water-resistant or impervious to the ingress of water. Water-Proofing is essential that prevents water from penetrating buildings also helps to keep the inside areas dry. It helps in reducing
-            the humidity inside the building, minimizing the damage done to furniture and alike.In areas that experience high annual rainfall and occasional flooding events, water-Proofing is a must. At Pheonix Chemicals we offer a wide range of waterproofing
-            by you can safeguard your building from damage as well as these things inside your house from water and humidity exposure.
-        </p>
-        <h1 class="text-center mt-5 p-2">Frequently Asked Questions</h1>
-        <br>
-        <div class="accordion" id="accordionPanel">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faq1">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqans1" aria-expanded="false" aria-controls="faqans1">
-                        What are the cement modifiers?
-                    </button>
-                </h2>
-                <div id="faqans1" class="accordion-collapse collapse show" aria-labelledby="faq1">
-                    <div class="accordion-body">
-                        Cement Modifiers are high solids acrylic-polymer modifiers that will give increased strength, flexibility and adhesion to most cement based products. Our PrimeBond+ and ElastoBond are the cement modifiers.
+    <section class="products section">
+        <div class="container">
+            <div class="section-title">
+                <h1>Our Products</h1>
+                <p>We offer a wide range of products for construction chemicals include most reliable products available for all your needs. </p>
+            </div>
+            <div class="row products">
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
+                    <div class="box">
+                        <h4><a href="hydro.html">HydroSeal</a></h4>
+                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
+                    <div class="box">
+                        <h4><a href="prime.html">PrimeBond+</a></h4>
+                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
+                    <div class="box">
+                        <h4><a href="putop.html">PUTopCoat</a></h4>
+                        <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
+                    <div class="box">
+                        <h4><a href="Elasto.html">Elastowhite</a></h4>
+                        <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </div>
             </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faq2">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqans2" aria-expanded="false" aria-controls="faqans2">
-                        Why ElastoBlack is used?
-                    </button>
-                </h2>
-                <div id="faqans2" class="accordion-collapse collapse" aria-labelledby="faq2">
-                    <div class="accordion-body">
-                        ElastoBlack is highly resistant to aggressive soils and soluble salts providing an effective continuous barrier and protection against water borne damage.
+            <div class="row products">
+                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
+                    <div class="box">
+                        <h4><a href="hydroip.html">HydroSealP</a></h4>
+                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
-            </div>
-
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="faq3">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqans3" aria-expanded="false" aria-controls="faqans3">
-                        Why HydroSeal is used?
-                    </button>
-                </h2>
-                <div id="faqans3" class="accordion-collapse collapse" aria-labelledby="faq3">
-                    <div class="accordion-body">
-                        HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect.
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
+                    <div class="box">
+                        <h4><a href="elasto.html">ElastoBond</a></h4>
+                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
+                    <div class="box">
+                        <h4><a href="black.html">ElastoBlack</a></h4>
+                        <p>ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
+                    <div class="box">
+                        <h4><a href="puinj.html">PUInjectGrout</a></h4>
+                        <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 
     <footer id="footer" class="mt-5">
         <div class="footer-top">
@@ -137,7 +144,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
