Contact section and singleproduct page

--- a/products.html
+++ b/products.html
@@ -13,12 +13,14 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/boxicons.min.css">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
     <title>Products</title>
 </head>
 
-<body>
+<body>e`
     <div class="header_section">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
                 <h1>PHEONIX CHEMICALS</h1>
             </a>
@@ -109,12 +111,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 footer-contact">
-                        <h3>Pheonix Chemicals</h3>
+                        <h3>Pheonix Chemicals</h3><br><br>
                         <p>
-                            B21, ArKhej, Ahmedabad, Gujarat
+                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
                             <br>
-                            <strong>Phone:</strong>+91-7906830840<br>
-                            <strong>Email:</strong> pheonixchemicals.in@gmail.com<br>
+                            <i class="fa-solid fa-phone"><strong>:</strong></i> +91-7906830840<br>
+                            <i class="fa-solid fa-envelope"><strong>:</strong></i> pheonixchemicals.in@gmail.com<br>
                         </p>
                     </div>
 
@@ -134,11 +136,11 @@
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
-                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#" class="google-plus"><i class="fa-brands fa-skype"></i></a>
+                            <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
