--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
-    <title>About</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -29,71 +29,69 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="products.html">Products</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </div>
-    <section class="section mt-5 p-2">
+    <section class="contact section mt-5 p-2">
         <div class="container">
             <div class="section-title">
-                <h1>About us</h1>
-                <p>
-                    Typically waterproofing is the process of making a structure water-resistant or impervious to the ingress of water. Water-Proofing is essential that prevents water from penetrating buildings also helps to keep the inside areas dry. It helps in reducing
-                    the humidity inside the building, minimizing the damage done to furniture and alike.In areas that experience high annual rainfall and occasional flooding events, water-Proofing is a must. At Pheonix Chemicals we offer a wide range
-                    of waterproofing by you can safeguard your building from damage as well as these things inside your house from water and humidity exposure.
-                </p>
+                <h1>Contact us</h1>
+                <p>Any questions or remarks? Just write us a message!</p>
             </div>
-            <div class="section-title">
-                <h1 class="text-center mt-5 p-2">Frequently Asked Questions</h1>
-            </div>
-            <br>
-            <div class="accordion" id="accordionPanel">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="faq1">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqans1" aria-expanded="false" aria-controls="faqans1">
-                            What are the cement modifiers?
-                        </button>
-                    </h2>
-                    <div id="faqans1" class="accordion-collapse collapse show" aria-labelledby="faq1">
-                        <div class="accordion-body">
-                            Cement Modifiers are high solids acrylic-polymer modifiers that will give increased strength, flexibility and adhesion to most cement based products. Our PrimeBond+ and ElastoBond are the cement modifiers.
+            <div class="row">
+                <div class="col-lg-5 mt-5 d-flex align-items-stretch">
+                    <div class="info">
+                        <div class="address">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <h4>Location:</h4>
+                            <p>B21, ArKhej, Ahmedabad, Gujarat</p>
+                        </div>
+                        <div class="phone">
+                            <i class="fa-solid fa-phone"></i>
+                            <h4>Phone:</h4>
+                            <p>+91-7906830840</p>
+                        </div>
+                        <div class="email">
+                            <i class="fa-solid fa-envelope"></i>
+                            <h4>Email:</h4>
+                            <p>pheonixchemicals.in@gmail.com</p>
                         </div>
                     </div>
                 </div>
-
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="faq2">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqans2" aria-expanded="false" aria-controls="faqans2">
-                            Why ElastoBlack is used?
-                        </button>
-                    </h2>
-                    <div id="faqans2" class="accordion-collapse collapse" aria-labelledby="faq2">
-                        <div class="accordion-body">
-                            ElastoBlack is highly resistant to aggressive soils and soluble salts providing an effective continuous barrier and protection against water borne damage.
+                <div class="col-lg-7 mt-5 d-flex align-items-stretch">
+                    <form action="#" method="post" class="contact-form">
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label for="name">Your Name:</label>
+                                <input type="text" required autofocus name="name" class="form-control">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="email">Your Email:</label>
+                                <input type="email" name="email" required class="form-control">
+                            </div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="faq3">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqans3" aria-expanded="false" aria-controls="faqans3">
-                            Why HydroSeal is used?
-                        </button>
-                    </h2>
-                    <div id="faqans3" class="accordion-collapse collapse" aria-labelledby="faq3">
-                        <div class="accordion-body">
-                            HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect.
+                        <div class="form-group">
+                            <label for="subject">Subject:</label>
+                            <input type="text" name="subject" required class="form-control">
                         </div>
-                    </div>
+                        <div class="form-group">
+                            <label for="message">Message:</label>
+                            <textarea class="form-control" name="message" rows="15" required></textarea>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit">Send Message</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
