--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/boxicons.min.css">
+    <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
     <title>Index</title>
 
 </head>
 
 <body>
     <div class="header_section">
-        <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+        <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
                 <h1>PHEONIX CHEMICALS</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                 <span class="navbar-toggler-icon"></span>
-            </button>
+                <span class="navbar-toggler-icon"></span>
+           </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -43,8 +43,6 @@
                 </ul>
             </div>
         </nav>
-
-
         <!-----banner-->
         <div class="d-flex align-items-center">
             <div class="banner">
@@ -105,17 +103,17 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 footer-contact">
-                        <h3>Pheonix Chemicals</h3>
+                    <div class="col-lg-4 col-md-6 footer-contact">
+                        <h3>Pheonix Chemicals</h3><br><br>
                         <p>
-                            B21, ArKhej, Ahmedabad, Gujarat
+                            <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
                             <br>
-                            <strong>Phone:</strong>+91-7906830840<br>
-                            <strong>Email:</strong> pheonixchemicals.in@gmail.com<br>
+                            <i class="fa-solid fa-phone"><strong>:</strong></i> +91-7906830840<br>
+                            <i class="fa-solid fa-envelope"><strong>:</strong></i> pheonixchemicals.in@gmail.com<br>
                         </p>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
+                    <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Products</h4>
                         <ul>
                             <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
@@ -127,15 +125,15 @@
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
+                    <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
-                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                            <a href="#" class="twitter"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#" class="google-plus"><i class="fa-brands fa-skype"></i></a>
+                            <a href="#" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
