--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
                     <div class="box">
-                        <h4><a href="hydro.html">HydroSeal</a></h4>
+                        <h4><a href="singleproduct.html">HydroSeal</a></h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
                     <div class="box">
-                        <h4><a href="prime.html">PrimeBond+</a></h4>
+                        <h4><a href="singleproduct.html">PrimeBond+</a></h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
                     <div class="box">
-                        <h4><a href="putop.html">PUTopCoat</a></h4>
+                        <h4><a href="singleproduct.html">PUTopCoat</a></h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
                     <div class="box">
-                        <h4><a href="Elasto.html">Elastowhite</a></h4>
+                        <h4><a href="singleproduct.html">Elastowhite</a></h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </div>
