--- a/products.html
+++ b/products.html
@@ -15,7 +15,9 @@
     <link rel="stylesheet" type="text/css" href="css/boxicons.min.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <title>Products</title>
+
 </head>
 
 <body>e`
@@ -45,60 +47,60 @@
             </div>
         </nav>
     </div>
-    <section class="products section">
-        <div class="container">
+    <section class="section">
+        <div class="product-container">
             <div class="section-title">
                 <h1>Our Products</h1>
                 <p>We offer a wide range of products for construction chemicals include most reliable products available for all your needs. </p>
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box">
-                        <h4><a href="hydro.html">HydroSeal</a></h4>
+                    <div class="box" data-name="hydro">
+                        <h4><a href="singleproduct.html">HydroSeal</a></h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
-                        <h4><a href="prime.html">PrimeBond+</a></h4>
+                    <div class="box" data-name="prime">
+                        <h4><a href="singleproduct.html">PrimeBond+</a></h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
-                        <h4><a href="putop.html">PUTopCoat</a></h4>
+                    <div class="box" data-name="putop">
+                        <h4><a href="singleproduct.html">PUTopCoat</a></h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
-                        <h4><a href="Elasto.html">Elastowhite</a></h4>
+                    <div class="box" data-name="white">
+                        <h4><a href="singleproduct.html">Elastowhite</a></h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
                 </div>
             </div>
             <div class="row products">
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
-                        <h4><a href="hydroip.html">HydroSealP</a></h4>
+                    <div class="box" data-name="hydroip">
+                        <h4><a href="singleproduct.html">HydroSealP</a></h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box">
-                        <h4><a href="elasto.html">ElastoBond</a></h4>
+                    <div class="box" data-name="bond">
+                        <h4><a href="singleproduct.html">ElastoBond</a></h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box">
-                        <h4><a href="black.html">ElastoBlack</a></h4>
+                    <div class="box" data-name="black">
+                        <h4><a href="singleproduct.html">ElastoBlack</a></h4>
                         <p>ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box">
-                        <h4><a href="puinj.html">PUInjectGrout</a></h4>
+                    <div class="box" data-name="puinject">
+                        <h4><a href="singleproduct.html">PUInjectGrout</a></h4>
                         <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
                     </div>
                 </div>
@@ -110,7 +112,7 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 footer-contact">
+                    <div class="col-lg-4 col-md-6 footer-contact">
                         <h3>Pheonix Chemicals</h3><br><br>
                         <p>
                             <i class="fa-solid fa-location-dot"><strong>:</strong></i> B21, ArKhej, Ahmedabad, Gujarat
@@ -120,7 +122,7 @@
                         </p>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
+                    <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Products</h4>
                         <ul>
                             <li><i class="fas fa-caret-right"></i> <a href="#">Penetrative Chemicals</a></li>
@@ -132,7 +134,7 @@
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
+                    <div class="col-lg-4 col-md-6 footer-links">
                         <h4>Our Social Networks</h4>
                         <p>You can reach out us on various platforms.</p>
                         <div class="social-links mt-3">
