--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box">
+                    <div class="box" data-name="hydro">
                         <h4><a href="singleproduct.html">HydroSeal</a></h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
+                    <div class="box" data-name="bond">
                         <h4><a href="singleproduct.html">PrimeBond+</a></h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
+                    <div class="box" data-name="putop">
                         <h4><a href="singleproduct.html">PUTopCoat</a></h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box">
+                    <div class="box" data-name="white">
                         <h4><a href="singleproduct.html">Elastowhite</a></h4>
                         <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                     </div>
