--- a/products.html
+++ b/products.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" type="text/css" href="css/boxicons.min.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
     <title>Products</title>
 
 </head>
 
-<body>e`
+<body>
+    <!--navbar section begins-->
     <div class="header_section">
         <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
@@ -47,6 +47,9 @@
             </div>
         </nav>
     </div>
+    <!--navbar section ends-->
+    <!--======================================================================-->
+    <!--product section begins-->
     <section class="section">
         <div class="product-container">
             <div class="section-title">
@@ -107,7 +110,9 @@
             </div>
         </div>
     </section>
-
+    <!--product section ends-->
+    <!--======================================================================-->
+    <!--footer section begins-->
     <footer id="footer" class="mt-5">
         <div class="footer-top">
             <div class="container">
@@ -149,6 +154,9 @@
             </div>
         </div>
     </footer>
+    <!--footer section ends-->
+    <!--======================================================================-->
+    <script async src="script.js"></script>
 </body>
 
 </html>
