--- a/About.html
+++ b/About.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+
+    <!--Nav bar section starts-->
     <div class="header_section">
         <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
@@ -42,6 +44,9 @@
             </div>
         </nav>
     </div>
+    <!--Nav bar section ends-->
+    <!--======================================================================-->
+    <!--About section starts-->
     <section class="section mt-5 p-2">
         <div class="container">
             <div class="section-title">
@@ -98,7 +103,9 @@
             </div>
         </div>
     </section>
-
+    <!--About section ends-->
+    <!--======================================================================-->
+    <!--Footer section starts-->
     <footer id="footer" class="mt-5">
         <div class="footer-top">
             <div class="container">
@@ -140,6 +147,8 @@
             </div>
         </div>
     </footer>
+    <!--Footer section ends-->
+    <!--======================================================================-->
 </body>
 
 </html>
