--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!--navbar section begins-->
     <div class="header_section">
         <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
@@ -42,6 +43,10 @@
             </div>
         </nav>
     </div>
+    <!--navbar section ends-->
+    <!--======================================================================-->
+
+    <!--contact section begins-->
     <section class="contact section mt-5 p-2">
         <div class="container">
             <div class="section-title">
@@ -96,7 +101,10 @@
             </div>
         </div>
     </section>
+    <!--contact section ends-->
+    <!--======================================================================-->
 
+    <!--footer section begins-->
     <footer id="footer" class="mt-5">
         <div class="footer-top">
             <div class="container">
@@ -138,6 +146,8 @@
             </div>
         </div>
     </footer>
+    <!--footer section ends-->
+    <!--======================================================================-->
 </body>
 
 </html>
