--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 </head>
 
 <body>
+
+    <!--header section starts-->
     <div class="header_section">
+        <!--Navbar section starts-->
         <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
                 <h1>PHEONIX CHEMICALS</h1>
@@ -43,7 +46,9 @@
                 </ul>
             </div>
         </nav>
-        <!-----banner-->
+        <!--Navbar section ends-->
+
+        <!-----banner section beginsr-->
         <div class="d-flex align-items-center">
             <div class="banner">
                 <div class="row">
@@ -58,7 +63,11 @@
             </div>
         </div>
     </div>
-    <!---products area-->
+    <!--banner section ends-->
+    <!--header section ends-->
+    <!--======================================================================-->
+
+    <!---products section starts-->
     <section class="products section">
         <div class="container">
             <div class="section-title">
@@ -98,7 +107,10 @@
             </div>
         </div>
     </section>
+    <!--products section ends-->
+    <!--======================================================================-->
 
+    <!--footer section starts-->
     <footer id="footer" class="mt-5">
         <div class="footer-top">
             <div class="container">
@@ -140,6 +152,9 @@
             </div>
         </div>
     </footer>
+    <!--footer section ends-->
+    <!--======================================================================-->
+    <script async src="script.js"></script>
 </body>
 
 </html>
