--- a/index.html
+++ b/index.html
@@ -8,23 +8,14 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-<<<<<<< HEAD
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap"
         rel="stylesheet">
-=======
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
->>>>>>> 99d133bb4e3585cda835f27e6892b34f25ebfdc3
     <title>Index</title>
 
 </head>
 
 <body>
     <div class="header_section">
-<<<<<<< HEAD
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
                 <a class="logo" href="index.html">
@@ -54,14 +45,14 @@
             </nav>
         </div>
 
-=======
         <nav class="navbar navbar-expand-lg">
             <a class="logo" href="index.html">
                 <h1>PHEONIX CHEMICALS</h1>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
-           </button>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
@@ -79,17 +70,16 @@
                 </ul>
             </div>
         </nav>
->>>>>>> 99d133bb4e3585cda835f27e6892b34f25ebfdc3
         <!-----banner-->
         <div class="d-flex align-items-center">
             <div class="banner">
                 <div class="row">
-                    <div class="col-lg-6 d-flex flex-column">
+                    <div class="col-lg-6 d-flex justify-content-center align-items-center flex-column">
                         <h2>Committed For Superior Quality</h2>
                         <h1>Pheonix Chemicals</h1>
                     </div>
                     <div class="col-lg-6 d-flex flex-column">
-                        <img src="images/banner1.jpg" class="img-fluid">
+                        <img src="images/banner1.jpg" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -100,31 +90,34 @@
         <div class="container">
             <div class="section-title">
                 <h1>Our Products</h1>
-                <p>We offer a wide range of products for construction chemicals include most reliable products available for all your needs. </p>
+                <p>We offer a wide range of products for construction chemicals include most reliable products available
+                    for all your needs. </p>
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box" data-name="hydro">
+                    <div class="box d-flex flex-column justify-content-center" data-name="hydro">
                         <h4><a href="singleproduct.html">HydroSeal</a></h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="bond">
+                    <div class="box d-flex flex-column justify-content-center" data-name="bond">
                         <h4><a href="singleproduct.html">PrimeBond+</a></h4>
-                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="putop">
+                    <div class="box d-flex flex-column justify-content-center" data-name="putop">
                         <h4><a href="singleproduct.html">PUTopCoat</a></h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="white">
+                    <div class="box d-flex flex-column justify-content-center" data-name="white">
                         <h4><a href="singleproduct.html">Elastowhite</a></h4>
-                        <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
+                        <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties.
+                        </p>
                     </div>
                 </div>
             </div>
