--- a/singleproduct.html
+++ b/singleproduct.html
@@ -25,7 +25,7 @@
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
-           </button>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -1381,14 +1381,11 @@
             </div>
         </div>
     </footer>
-    <<<<<<< HEAD <!--Footer section ends-->
-        <!--======================================================================-->
-        <script async src="script.js"></script>
-        =======
+    <!--Footer section ends-->
+    <!--======================================================================-->
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
 
-        <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
-        <script src="script.js"></script>
-        >>>>>>> bd5142e4f80ef717441ad890c811ba21c5a0a435
 </body>
 
 </html>
