--- a/products.html
+++ b/products.html
@@ -57,55 +57,71 @@
                 <p>We offer a wide range of products for construction chemicals include most reliable products available for all your needs. </p>
             </div>
             <div class="row products">
-                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box" data-name="hydro">
-                        <h4><a href="singleproduct.html">HydroSeal</a></h4>
-                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
-                    </div>
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="hydro">
+                            <h4>HydroSeal</h4>
+                            <p>A penetrating chemical with high penetrating and water repellent effect.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="prime">
-                        <h4><a href="singleproduct.html">PrimeBond+</a></h4>
-                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
-                    </div>
+                <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="prime">
+                            <h4>PrimeBond+</h4>
+                            <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="putop">
-                        <h4><a href="singleproduct.html">PUTopCoat</a></h4>
-                        <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
-                    </div>
+                <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="putop">
+                            <h4>PUTopCoat</h4>
+                            <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="white">
-                        <h4><a href="singleproduct.html">Elastowhite</a></h4>
-                        <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
-                    </div>
+                <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="white">
+                            <h4>Elastowhite</h4>
+                            <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="row products">
-                <div class="col-lg-3 align-items-stretch mt-4 col-md-6">
-                    <div class="box" data-name="hydroip">
-                        <h4><a href="singleproduct.html">HydroSealP</a></h4>
-                        <p>A penetrating chemical with high penetrating and water repellent effect.</p>
-                    </div>
+                <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="hydroip">
+                            <h4>HydroSealP</h4>
+                            <p>A penetrating chemical with high penetrating and water repellent effect.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box" data-name="bond">
-                        <h4><a href="singleproduct.html">ElastoBond</a></h4>
-                        <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
-                    </div>
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="bond">
+                            <h4>ElastoBond</h4>
+                            <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box" data-name="black">
-                        <h4><a href="singleproduct.html">ElastoBlack</a></h4>
-                        <p>ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane.</p>
-                    </div>
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="black">
+                            <h4>ElastoBlack</h4>
+                            <p>ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane.</p>
+                        </div>
+                    </a>
                 </div>
-                <div class="col-lg-3 col-md-6 align-items-stretch mt-4">
-                    <div class="box" data-name="puinject">
-                        <h4><a href="singleproduct.html">PUInjectGrout</a></h4>
-                        <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
-                    </div>
+                <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
+                    <a href="singleproduct.html">
+                        <div class="box" data-name="puinject">
+                            <h4>PUInjectGrout</h4>
+                            <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
