add product and banner images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h1>Pheonix Chemicals</h1>
                     </div>
                     <div class="col-lg-6 d-flex flex-column">
-                        <img src="images/banner1.jpg" class="img-fluid rounded">
+                        <img src="images/lending poto.jpg" class="img-fluid rounded">
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
                     <a onclick="showDetails()">
-                        <div class="box" data-name="hydro">
+                        <div class="box" data-name="hydroseal">
                             <h4>HydroSeal</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
                         </div>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
                     <a onclick="showDetails()">
-                        <div class="box" data-name="prime">
+                        <div class="box" data-name="primebond">
                             <h4>PrimeBond+</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
                         </div>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
                     <a onclick="showDetails()">
-                        <div class="box" data-name="putop">
+                        <div class="box" data-name="PutopCoat">
                             <h4>PUTopCoat</h4>
                             <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
                         </div>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
                     <a onclick="showDetails()">
-                        <div class="box" data-name="white">
+                        <div class="box" data-name="elastobond">
                             <h4>Elastowhite</h4>
                             <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
                         </div>
