--- a/singleproduct.html
+++ b/singleproduct.html
@@ -50,10 +50,10 @@
     <!--Products details section starts-->
 
     <div class="products-info">
-        <div class="section product mt-5 p-2" name="hydroseal">
+        <div class="section product mt-5 p-2" name="hydroseal" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/HydroSeal.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>HydroSeal</h1>
@@ -189,10 +189,10 @@
             </div>
         </div>
 
-        <div class="section product mt-5 p-2" name="elastobond">
+        <div class="section product mt-5 p-2" name="elastobond" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/ElstoBond Combo.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>ElastoBond</h1>
@@ -336,10 +336,10 @@
             </div>
         </div>
 
-        <div class="section product mt-5 p-2" name="PutopCoat">
+        <div class="section product mt-5 p-2" name="PutopCoat" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/PUTopCoat.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>PU TopCoat</h1>
@@ -497,10 +497,10 @@
             </div>
         </div>
 
-        <div class="section product mt-5 p-2" name="primebond">
+        <div class="section product mt-5 p-2" name="primebond" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/PrimeBond+.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>PrimeBond+</h1>
@@ -646,10 +646,10 @@
             </div>
         </div>
 
-        <div class="section product mt-5 p-2" name="elastowhite">
+        <div class="section product mt-5 p-2" name="elastowhite" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/ElastoWhite.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>ElastoWhite</h1>
@@ -832,10 +832,10 @@
             </div>
         </div>
 
-        <div class="section product mt-5 p-2" name="puInjectGrout">
+        <div class="section product mt-5 p-2" name="puInjectGrout" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/PUTopCoat 1K.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>PUInjectGrout</h1>
@@ -944,10 +944,10 @@
             </div>
         </div>
 
-        <div class="section product mt-5 p-2" name="elastowhite">
+        <div class="section product mt-5 p-2" name="elastowhite" style="display: none;">
             <div class="row">
                 <div class="col-lg-6 col-md-12 justify-content-center">
-                    <img src="images/hydroseal.jpg">
+                    <img src="images/ElastoBlack.png">
                 </div>
                 <div class="section-title col-lg-6 col-md-12 justify-content-center">
                     <h1>ElastoBlack</h1>
@@ -1383,7 +1383,7 @@
     </footer>
     <!--Footer section ends-->
     <!--======================================================================-->
-    <script src="script.js"></script>
+    <script async src="script.js"></script>
     <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
 
 </body>
