--- a/products.html
+++ b/products.html
@@ -126,6 +126,149 @@
             </div>
         </div>
     </section>
+
+    <div class="section product mt-5 p-2" name="hydroseal">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 justify-content-center">
+                <img src="images/HydroSeal.png">
+            </div>
+            <div class="section-title col-lg-6 col-md-12 justify-content-center">
+                <h1>HydroSeal</h1>
+                <p>
+                    HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
+                    water resistance almost all kind of surface.
+                </p>
+            </div>
+        </div>
+        <div class="details accordion" id="accordionPanel">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="IntroductionHead">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#IntroductionBody" aria-expanded="false" aria-controls="IntroductionBody">
+                        Introduction
+                    </button>
+                </h2>
+                <div id="IntroductionBody" class="accordion-collapse collapse show" aria-labelledby="IntroductionHead">
+                    <div class="accordion-body">
+                        HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
+                        water resistance almost all kind of surface.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="advantagesHead">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#advantagesBody" aria-expanded="false" aria-controls="advantagesBody">
+                        Advantages
+                    </button>
+                </h2>
+                <div id="advantagesBody" class="accordion-collapse collapse" aria-labelledby="advantagesHead">
+                    <div class="accordion-body">
+                        <ul>
+                            <li><i class="fa fa-caret-right"></i>Reactive, Penetrative and Long Lasting.</li>
+                            <li><i class="fa fa-caret-right"></i>Penetrates deep up to 5 to 7 mm due to very low molecule size.</li>
+                            <li><i class="fa fa-caret-right"></i>Protect substrates from deteriorating due to weathering.</li>
+                            <li><i class="fa fa-caret-right"></i>Hydrophobic agent as well as penetrating solution for concrete/cement plaster & gypsum etc.</li>
+                            <li><i class="fa fa-caret-right"></i>Excellent film formation and improves the strength of surface.</li>
+                            <li><i class="fa fa-caret-right"></i>Good alkali and water resistance and allow the surface to breathe.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="SpecificationsHead">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#SpecificationsBody" aria-expanded="false" aria-controls="SpecificationsBody">
+                        Specifications
+                    </button>
+                </h2>
+                <div id="SpecificationsBody" class="accordion-collapse collapse" aria-labelledby="SpecificationsHead">
+                    <div class="accordion-body">
+                        <table>
+                            <tr>
+                                <th>Properties</th>
+                                <th>Specifications</th>
+                            </tr>
+                            <tr>
+                                <td>Appearance</td>
+                                <td>Milky, white and low viscous</td>
+                            </tr>
+                            <tr>
+                                <td>Emulsifying System</td>
+                                <td>Anionic/Non-Ionic</td>
+                            </tr>
+                            <tr>
+                                <td>Total Solids (%)</td>
+                                <td>32.0 ± 2.0</td>
+                            </tr>
+                            <tr>
+                                <td>pH at 25&deg;C</td>
+                                <td>8 to 10</td>
+                            </tr>
+                            <tr>
+                                <td>Brookfield Viscosity LVF (CPS) SP.1,6 RPM at 25&deg;C</td>
+                                <td>20</td>
+                            </tr>
+                            <tr>
+                                <td>Specific Gravity</td>
+                                <td>1.025 ± 0.02</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="CoverageHead">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#CoverageBody" aria-expanded="false" aria-controls="CoverageBody">
+                        Coverage
+                    </button>
+                </h2>
+                <div id="CoverageBody" class="accordion-collapse collapse" aria-labelledby="CoverageHead">
+                    <div class="accordion-body">
+                        Ideal consumption 120 grams to 200 gram per SQM.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="StorageHead">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#StorageBody" aria-expanded="false" aria-controls="StorageBody">
+                        Storage
+                    </button>
+                </h2>
+                <div id="StorageBody" class="accordion-collapse collapse" aria-labelledby="StorageHead">
+                    <div class="accordion-body">
+                        Store between temperature of 5&deg;C to 40&deg;C. Keep container closed when not in use.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="ShelfHead">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ShelfBody" aria-expanded="false" aria-controls="ShelfBody">
+                        Shelf-Life
+                    </button>
+                </h2>
+                <div id="ShelfBody" class="accordion-collapse collapse" aria-labelledby="ShelfHead">
+                    <div class="accordion-body">
+                        18 Months from date of manufacturing provided stored under shade, away from direct heat and sunlight and well protected from freezing.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="PackagingHead">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#PackagingBody" aria-expanded="false" aria-controls="PackagingBody">
+                        Packaging
+                    </button>
+                </h2>
+                <div id="PackagingBody" class="accordion-collapse collapse" aria-labelledby="PackagingHead">
+                    <div class="accordion-body">
+                        25 Kg Carboys / drum
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
     <!--product section ends-->
     <!--======================================================================-->
     <!--footer section begins-->
@@ -173,6 +316,7 @@
     <!--footer section ends-->
     <!--======================================================================-->
     <script async src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </body>
 
 </html>
